--- a/periscope-web/src/main/webapp/pages/project/report/allReports/mainApplicant.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/report/allReports/mainApplicant.xhtml
@@ -18,22 +18,22 @@
             <center><h1>#{msgs['main.applicant']}</h1></center>
             <br></br>
             <h:form id="chart" styleClass="container">
-              
-                        <i:filtro controller="#{report}" applicantNature="true" />
+
+                <i:filtro controller="#{mainApplicantController}" applicantNature="true" />
 
 
                 <h:panelGrid columns="1" id="tudo" styleClass="container" >
 
-                    <p:outputLabel value="#{msgs['empty']}" rendered="#{report.model.series.get(0).getData().size()==0}" />
+                    <p:outputLabel value="#{msgs['empty']}" rendered="#{mainApplicantController.model.series.get(0).getData().size()==0}" />
 
 
-                    <p:barChart id="horizontal" value="#{report.model}"  rendered="#{report.model.series.get(0).getData().size()!=0}"
+                    <p:barChart id="horizontal" value="#{mainApplicantController.model}"  rendered="#{mainApplicantController.model.series.get(0).getData().size()!=0}"
                                 legendPosition="se" title="#{msgs['main.applicant']}"
                                 orientation="horizontal" datatipFormat="%s" />
 
                     <p:dataTable id="applicants"
                                  emptyMessage="#{msgs['no.applicant']}" var="pair"
-                                 value="#{report.pairs}">
+                                 value="#{mainApplicantController.pairs}">
 
                         <p:column headerText="#{msgs['name']}">
                             <h:outputText value="#{pair.key}" />
