--- a/periscope-web/src/main/webapp/pages/project/harmonization/applicantHarmonization.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/harmonization/applicantHarmonization.xhtml
@@ -123,7 +123,7 @@
             <p:dialog id="applicantDocs" widgetVar="applicantDocsDialog" modal="true" 
                       header="#{msgs['applicant.docs']}" resizable="false">
 
-                <p:dataTable id="patents" var="patent" style="font-size:12px"
+                <p:dataTable id="patents" var="patent" style="font-size:12px; overflow: scroll; height: 500px"
                              emptyMessage="#{msgs['no.docs']}"
                              value="#{applicantHarmonizationController.patents}" paginator="true"
                              paginatorAlwaysVisible="false" paginatorPosition="bottom" rows="10"
