--- a/periscope-web/src/main/webapp/pages/project/harmonization/inventorsHarmonization.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/harmonization/inventorsHarmonization.xhtml
@@ -116,7 +116,7 @@
                       header="#{msgs['inventor.docs']}" resizable="false">
 
                 <p:dataTable 
-                    id="patents" var="patent" style="font-size:12px"
+                    id="patents" var="patent" style="font-size:12px; overflow: scroll; height: 500px"
                     emptyMessage="#{msgs['no.docs']}"
                     value="#{inventorHarmonizationController.patents}" paginator="true"
                     paginatorAlwaysVisible="false" paginatorPosition="bottom" rows="10"
