--- a/periscope-web/src/main/webapp/pages/project/patent/patentImport.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/patent/patentImport.xhtml
@@ -20,7 +20,7 @@
                                            block;border-radius: 5px;padding: 5px;width: 120px;color: #fff" 
                                            rendered="#{importPatentController.stepOne}" >#{msgs['step.one']}</p:outputLabel>
                             <p:outputLabel >#{msgs['file.origin']} :</p:outputLabel>
-                            <p:selectOneMenu value="#{importPatentController.fileOrigin}">
+                            <p:selectOneMenu value="#{importPatentController.fileOrigin}" disabled="#{not importPatentController.stepOne}">
                                 <f:selectItems value="#{importPatentController.origins}" />
                             </p:selectOneMenu>
                             <p:panel id="pnl" toggleOrientation="vertical">
